--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,7 @@ a:hover {
 
 header {
   text-align: center;
-  background: url('images/Taipei-101.jpg') no-repeat center;
+  background: url('images/taipei-101.jpg') no-repeat center;
   background-size: cover;
   overflow: hidden;
   padding-top: 60px;
